payment_reatailer_dashboard_cart update

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@campusnooks" />
     <meta name="twitter:image" content="/src/assets/hero-dorm-room.jpg" />
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
 
   <body>
